Added JS functionality CSS updates HTML updates

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <p id="tree0"></p>
         <br>
         <p id="tree1"></p>
+        <br>
+        <p id="challenge"></p>
       
       
       <!--<p id="digitsBtn"><span>Sum of Digits</span>
