--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div class="container">
     <div class="instructions">
       <p id="instructions">Given a digit between 1&ndash;9, enter a number that sums up to the same digit.</p>
+      
     </div>
       
       <div class="sumDigi">
@@ -43,9 +44,11 @@
 
 <div class="inputGroup">
   <div class="info info1">
-    <p>Enter your number:<br></p>
+    <p>Enter your number: <span role="img" aria-label="information on number restrictions" class="tooltip">&#9432;
+      <span class="tooltiptext">Number zero (0) is restricted.</span>
+    </span><br></p>
   </div>
-  <input required type="text" name="userNum" class="box" id="userNum" size="17" pattern=".{2,}" maxlength="14" oninput="this.value = this.value.replace(/[^1-9]/g, '').replace(/^0/, '').replace(/(\..*)\./g, '$1')">
+  <input required type="text" name="userNum" class="box" id="userNum" size="17" pattern=".{2,}" maxlength="14" oninput="this.value = this.value.replace(/[^1-9]/g, '').replace(/(\..*)\./g, '$1')">
 <br>   
 <button id="firstButton" onclick="treeResult4()" disabled>Enter</button>
 <p class="info" id="replacementText"></p>
@@ -75,7 +78,7 @@
   </div>
 </div>
 <div class="reset">
-  <button id="resetBtn" onclick="reset()" >Reset</button>
+  <button id="resetBtn" onclick="reset()">Reset</button>
 </div>  
 <footer>Guess the Digits 2023</footer>
   </div>
