--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
 <link rel="manifest" href="images/favicon_io/site.webmanifest">
 
-    <title>Match the Digit</title>
+<title>Match the Digit</title>
 
 </head>
 <body>
   <h1>Match the Digit</h1>
   <div class="container">
     <div class="instructions">
-      <p id="instructions">Can you find a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits</a> is equal to a random number?</p>
+      <p id="instructions">Can you find a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits <span role="img" aria-label="link opens in new window" >&#10138;</span></a> is equal to a random number?</p>
       
     </div>
       
@@ -54,7 +54,7 @@
   oninput="this.value = this.value.replace(/[^1-9]/g, '')">
 <br>   
 <button id="firstButton" onclick="treeResult4()" disabled>Enter</button>
-<p class="info" id="replacementText"></p>
+<p id="replacementText"></p>
 
 
    <!-- <span id="numResult" name="numResult"></span> -->
@@ -68,7 +68,7 @@
 </div>-->
 
   <div class="section-3">
-   <div class="info info4">
+   <div class="info4">
     <!--  <p>Sum of digits&hellip;</p>-->
         </div> 
 <div class="section-4">
