--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 <div class="section-1">
    <div class="digit">
-    <p class="infoRan infoRan1">Here's a random number between 1&ndash;9&hellip;</p>
+    <p class="infoRan infoRan1">Here's a random number between 1&ndash;9:</p>
     <p id="randomNum"></p>
    </div>
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
