--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Match the Digit</h1>
   <div class="container">
     <div class="instructions">
-      <p id="instructions">Can you find a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits <span role="img" aria-label="link opens in new window" >&#10138;</span></a> is equal to a random number?</p>
+      <p id="instructions">Can you find a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits <span role="img" aria-label="link opens in new window" ><small><sup>&#10138;</sup></small></span></a> is equal to a random number?</p>
       
     </div>
       
