--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
       
     
 <div class="section-1">
-   <div class="digit">
-    <p class="infoRan infoRan1">This is a random digit between 2&ndash;9:</p>
-    <p class="randomNum"></p>
+   <div class="digit infoRan">
+    <p>This is a random digit between 2&ndash;9:</p>
+    <p id="randomNum"></p>
    </div>
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
-
 <div class="inputGroup">
   <div class="infoRan">
     <p>Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is equal to the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
@@ -49,7 +48,6 @@
       	&#x25cf; Must be at least two digits long<br>&#x25cf; Zeros are not accepted
       </span>
     </span></p>
-    <p class="randomNum"></p>
   </div>
   <input required type="text" name="userNum" class="box" id="userNum" size="17"  maxlength="14" 
   oninput="this.value = this.value.replace(/[^1-9]/g, '')">
