--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       
     
 <div class="section-1">
-   <div class="digit infoRan">
-    <p>This is a random digit between 2&ndash;9:</p>
+   <div class="digit">
+    <p class="infoRan">This is a random digit between 2&ndash;9:</p>
     <p id="randomNum"></p>
    </div>
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
