--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
    </div>
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
 <div class="inputGroup">
-  <div class="infoRan">
-    <p>Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is equal to the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
+  
+    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is equal to the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
       <span class="tooltiptext">
       	&#x25cf; Must be at least two digits long<br>&#x25cf; Zeros are not accepted
       </span>
     </span></p>
-  </div>
+ 
   <input required type="text" name="userNum" class="box" id="userNum" size="17"  maxlength="14" 
   oninput="this.value = this.value.replace(/[^1-9]/g, '')">
 <br>   
