--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 <div class="section-1">
    <div class="digit">
-    <p class="infoRan">This is a random digit between 2&ndash;9:</p>
+    <p class="infoRan">Here is a random digit between 2&ndash;9:</p>
     <p id="randomNum"></p>
    </div>
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
