--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
 <div class="inputGroup">
   
-    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is equal to the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
+    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> matches the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
       <span class="tooltiptext">
       	&#x25cf; Must be at least two digits long<br>&#x25cf; Zeros are not accepted
       </span>
