Page Title edit
Revised header

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
 <link rel="manifest" href="images/favicon_io/site.webmanifest">
 
-<title>Match the Digit</title>
+<title>Equal Digits</title>
 
 </head>
 <body>
-  <h1>Match the Digit</h1>
+  <h1>Equal Digits</h1>
   <div class="container">
  <!--  <div class="instructions">
       <p id="instructions">Find a number whose  is equal to the random single-digit.</p>
@@ -43,7 +43,7 @@
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
 <div class="inputGroup">
   
-    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> matches the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
+    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is equal to the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
       <span class="tooltiptext">
       	&#x25cf; Must be at least two digits long<br>&#x25cf; Zeros are not accepted
       </span>
@@ -84,7 +84,7 @@
 <div class="reset">
   <button id="resetBtn" onclick="reset()">Reset</button>
 </div>  
-<footer>Match the Digit 2023</footer>
+<footer>Equal Digits 2023</footer>
   </div>
   
  
