--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>Equal Digits</title>
 
 </head>
-<body>
+<body onclick>
   <h1>Equal Digits</h1>
   <div class="container">
  <!--  <div class="instructions">
