Edited footer text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <!--<button id="randBtn" onclick="ranNumber()">Random Number</button>--> 
 <div class="inputGroup">
   
-    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span id="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is <span id="emphasis">equal to</span> the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
+    <p class="infoRan">Enter a number whose <a href="https://erricrr.github.io/sumofdigits/" target="_blank">sum of all digits<span class="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a> is <span id="emphasis">equal to</span> the random digit: <span role="img" aria-label="information on number requirements" class="tooltip">&#9432;
       <span class="tooltiptext">
       	&#x25cf; Must be at least two digits long<br>&#x25cf; Zeros are not accepted
       </span>
@@ -84,7 +84,9 @@
 <div class="reset">
   <button id="resetBtn" onclick="reset()">Reset</button>
 </div>  
-<footer>Equal Digits 2023</footer>
+<footer>
+  <p id="footCopy">Equal Digits&mdash;2023 &copy; <a id="ebfooterLink" class="newWindow" href="https://ericab.netlify.app/" target="_blank">Erica Burgos<span class="newWindow" role="img" aria-label="link opens in new window">&#10138;</span></a></p>
+</footer>
   </div>
   
  
